--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,12 @@ requirements:
     - pip
   run:
     - python >={{ python_min }}
-    - dunamai >=1.23
-    - eval-type-backport >=0.2
-    - hatchling >=1.26
-    - jinja2 >=3.0
-    - pydantic >=2.10
-    - returns >=0.23
-    - tomlkit >=0.13
+    - dunamai ~=1.23
+    - eval-type-backport ~=0.2
+    - hatchling ~=1.26
+    - jinja2 ~=3.0
+    - pydantic ~=2.10
+    - tomlkit ~=0.13
 
 test:
   imports:
